backend/src/main/java/com/example/tutorApp/errors/AssignmentNotFoundException.java
package com.example.tutorApp.errors;

public class AssignmentNotFoundException extends RuntimeException {
    public AssignmentNotFoundException() {
        super("Assignment not found in system");
    }
}
